# jellyfin-rpc

.github/workflows/: build.yml  release.yml
jellyfin-rpc/: Cargo.toml
jellyfin-rpc-cli/: Cargo.toml
jellyfin-rpc/src/: lib.rs
